--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="col-lg-6 py-5 px-5">
           <h2 class="display-5 fw-bold lh-1 mb-3 px-3" style="text-shadow: 2px 2px #969696 ">Hi, I'm Ervin!</h2>
           
-          <p class="fs-4 px-3">I'm currently a senior at Druga gimnazija Sarajevo in Bosnia and Herzegovina. <br> I'm interested in <strong>mathematics and computer science</strong>. 
+          <p class="fs-4 px-3">I'm from Bosnia and Herzegovina. <br> I'm currently a first-year student studying <strong>Math and Computer Science</strong> at Oxford. 
             </p>
         </div>
       </div>
