Made URLs nicer

--- a/contact/index.html
+++ b/contact/index.html
@@ -120,7 +120,7 @@
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Or you can schedule a meeting directly through my Calendly: <a href="https://calendly.com/ervin-macic" style="color: inherit" target="_blank">Calendly</a></p>
+    <p>Or you can schedule a meeting directly through: <a href="https://calendly.com/ervin-macic" style="color: inherit" target="_blank"><strong>Calendly</strong></a> </p>
   </footer>
 
   <script src="https://kit.fontawesome.com/5e46548df0.js" crossorigin="anonymous"></script>
