--- a/about/index.html
+++ b/about/index.html
@@ -72,9 +72,9 @@
       <div class="spacer whiterote"></div>
     <div class="bg-rot text-secondary px-4 py-5 text-center">
       <div class="py-5">
-        <h2 class="display-5 fw-bold text-white" style="text-shadow: 1.5px 1.5px #7c7e7b ">What do I do? &#129300</h2>
+        <h2 class="display-5 fw-bold text-white" style="text-shadow: 1.5px 1.5px #7c7e7b ">What do I do? </h2>
         <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4 text-white"> I solve problems in the real world using math & CS 💻. I spend my time researching and developing AI models and pipelines. I also enjoy doing olympiad mathematics, playing the piano, and swimming! &#127946;  </p>
+          <p class="fs-5 mb-4 text-white"> I'm currently studying but spend my free time learning as much as I can about AI and figuring out what I should do in the future. I enjoy solving tough problems, playing the piano, and swimming! &#127946;  </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <!-- <a href="https://artofproblemsolving.com/community/my-aops" style="color: inherit; text-decoration: none;" target="_blank"><button type="button" class="btn btn-outline-success btn-lg px-4 me-sm-3 fw-bold">AoPS</button></a>
             <a href="https://github.com/FrequentErvin" style="color: inherit; text-decoration: none;" target="_blank"><button type="button" class="btn btn-outline-light btn-lg px-4">GitHub</button></a> -->
@@ -102,7 +102,7 @@
         <div class="row p-4 pb-0 align-items-center rounded-3 justify-content-center ">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 ">
             <h2 class="display-4 fw-bold lh-1 text-white">Blog & Projects</h2>
-            <p class="lead text-white-50">Check out my blog and the projects section. I post something on the blog monthly, and on the projects section I update projects I'm working on &#128521</p>
+            <p class="lead text-white-50">Check out my blog and the projects section &#128521</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
               <a href="../blog/" style="color: inherit; text-decoration: none;"><button type="button" class="btn btn-danger btn-lg px-4 me-md-2 fw-bold">Blog</button></a>
               <a href="../projects/" style="color: inherit; text-decoration: none;"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Projects</button></a>
@@ -141,7 +141,7 @@
             <ul class="social-icons">
               <li><a class="facebook" href="https://www.facebook.com/ervin.macic/"><i class="fa fa-facebook"></i></a></li>
               <li><a class="dribbble" href="https://www.instagram.com/ervin.macic/" ><i class="fa fa-instagram"></i></a></li>
-              <li><a class="linkedin" href="https://www.linkedin.com/in/ervin-macic-2a300a1ab/"><i class="fa fa-linkedin"></i></a></li>   
+              <li><a class="linkedin" href="https://www.linkedin.com/in/ervin-macic/"><i class="fa fa-linkedin"></i></a></li>   
             </ul>
           </div>
         </div>
