--- a/projects/index.html
+++ b/projects/index.html
@@ -23,27 +23,23 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0 justify-content-center">
             <li class="nav-item px-3 justify-content-center">
-              <a class="nav-link active text-white hvr-underline-reveal" aria-current="page" href="../about/" id="#"><h4 style="text-shadow: 1.5px 1.5px #7c7e7b ">About</h4></a>
+              <a class="nav-link active text-white hvr-underline-reveal" aria-current="page" href="/about/" id="#"><h4 style="text-shadow: 1.5px 1.5px #50524f ">About</h4></a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" href="../blog/" id="#"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Blog</h4></a>
+              <a class="nav-link text-white hvr-underline-reveal" href="/Ervin_Macic_CV.pdf" id="cv" target="_blank"><h4 style="text-shadow: 1.5px 1.5px #50524f ">CV</h4></a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" href="../contact/">
-                <h4 style="text-shadow: 1.5px 1.5px #7c7e7b ">Contact</h4>
+              <a class="nav-link text-white hvr-underline-reveal" href="/contact/">
+                <h4 style="text-shadow: 1.5px 1.5px #50524f ">Contact</h4>
               </a>
             </li>
-            <!-- <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" href="/ErvinMacic_CV.pdf" id="cv" target="_blank"><h4 style="text-shadow: 1.5px 1.5px #7c7e7b ">CV</h4></a>
-            </li> -->
+            <li class="nav-item px-3">
+              <a class="nav-link text-white hvr-underline-reveal" href="/blog/" id="#"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Blog</h4></a>
+            </li>
             <li class="nav-item px-3">
               <a class="nav-link text-white hvr-underline-reveal" id="#" href="#"><h4 style="text-shadow: 1.5px 1.5px #7c7e7b ">Projects</h4></a>
             </li>
           </ul>
-          <!-- <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form> -->
         </div>
       </div>
     </nav>
