Update about photo and misc colours

--- a/about/index.html
+++ b/about/index.html
@@ -6,15 +6,14 @@
     <title>Ervin Macić</title>
     <link href="index.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../css/hover.css" rel="stylesheet" media="all">
-    <link href="../style.css" rel="stylesheet" type="text/css">
+    <link href="/css/hover.css" rel="stylesheet" media="all">
+    <link href="/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sora">
     <link rel="icon" href="/images/mojaglavusina.jpg">
-  
   </head>
   <body id="home">
-     <nav class="navbar navbar-expand-lg navbar-dark bg-purple">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-purple">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,12 +47,12 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
         <div class="col-lg-6">
           <figure>
-            <div class="delux-centering"><img src="../images/mojaglavusina.jpg" class="d-block mx-lg-auto img-fluid roundy shady"></div>
+            <div class="delux-centering"><img src="/images/ervin_photo.jpg" class="d-block mx-lg-auto img-fluid roundy shady"></div>
             <figcaption class=" text-center py-2 fs-4 fw-light"> <strong><span class="font-monospace">Ervin Macić &#128075</span></strong></figcaption>
           </figure>
         </div>
         <div class="col-lg-6 py-5 px-5">
-          <h2 class="display-5 fw-bold lh-1 mb-3 px-3" style="text-shadow: 2px 2px #969696 ">Hi, I'm Ervin!</h2>
+          <h2 class="display-5 fw-bold lh-1 mb-3 px-3" style="text-shadow: 2px 2px #969696 ">Hi, I'm Ervin</h2>
           
           <p class="fs-4 px-3">I'm from Bosnia and Herzegovina. <br> I'm currently a first-year student studying <strong>Math and Computer Science</strong> at Oxford. 
             </p>
@@ -72,11 +71,9 @@
       </div>
       </div>
       <div class="spacer whitepurple flip"></div>
-
         <div class="container d-flex justify-content-center p-3">
           <h2 class="display-5 fw-bold py-5">Schedule a meeting with me</h2>
         </div>
-        
 <!-- Calendly inline widget begin -->
 <div id="calendly" class="calendly-inline-widget" data-url="https://calendly.com/ervin-macic/conversation-meeting?hide_gdpr_banner=1" style="min-width:320px;height:800px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
@@ -88,7 +85,7 @@
         <div class="row p-4 pb-0 align-items-center rounded-3 justify-content-center ">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 ">
             <h2 class="display-4 fw-bold lh-1 text-white">Blog & Projects</h2>
-            <p class="lead text-white-50">Check out my blog and the projects section &#128521</p>
+            <p class="lead text-white-50">Check out the blog and the projects section</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
               <a href="../blog/" style="color: inherit; text-decoration: none;"><button type="button" class="btn btn-danger btn-lg px-4 me-md-2 fw-bold">Blog</button></a>
               <a href="../projects/" style="color: inherit; text-decoration: none;"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Projects</button></a>
