--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/images/mojaglavusina.jpg">
   </head>
   <body id="home">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-purple">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-darke">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
         </div>
       </div>
     </nav> 
-    <div id="red-white" class="placeholder purplewhite"></div>
+    <div id="red-white" class="placeholder homedarkwhite"></div>
       
     <div class="container px-4 py-2 border shadow mt-1 mb-5 rounded-3 bg-blobs" id="hero">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
@@ -59,8 +59,8 @@
         </div>
       </div>
       </div>
-      <div class="spacer whitepurple"></div>
-    <div class="bg-purple text-secondary px-4 py-5 text-center">
+      <div class="spacer aboutwhitedark"></div>
+    <div class="bg-darke text-secondary px-4 py-5 text-center">
       <div class="py-5">
         <h2 class="display-5 fw-bold text-white" style="text-shadow: 1.5px 1.5px #7c7e7b ">What do I do? </h2>
         <div class="col-lg-6 mx-auto">
@@ -70,7 +70,7 @@
         </div>
       </div>
       </div>
-      <div class="spacer whitepurple flip"></div>
+      <div class="spacer aboutwhitedark flip"></div>
         <div class="container d-flex justify-content-center p-3">
           <h2 class="display-5 fw-bold py-5">Schedule a meeting with me</h2>
         </div>
