--- a/about/index.html
+++ b/about/index.html
@@ -34,9 +34,9 @@
             <li class="nav-item px-3">
               <a class="nav-link text-white hvr-underline-reveal" href="/blog/" id="#"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Blog</h4></a>
             </li>
-            <li class="nav-item px-3">
+            <!-- <li class="nav-item px-3">
               <a class="nav-link text-white hvr-underline-reveal" id="#" href="../projects/"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Projects</h4></a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -54,12 +54,13 @@
         <div class="col-lg-6 py-5 px-5">
           <h2 class="display-5 fw-bold lh-1 mb-3 px-3" style="text-shadow: 2px 2px #969696 ">Hi, I'm Ervin</h2>
           
-          <p class="fs-4 px-3">I'm from Bosnia and Herzegovina. <br> I'm currently a first-year student studying <strong>Math and Computer Science</strong> at Oxford. 
+          <p class="fs-4 px-3">I'm from Bosnia and Herzegovina. <br> I'm currently studying <strong>Maths and Computer Science</strong> at Oxford. <br> I'm primarily interested in AI and quantitative finance.
             </p>
         </div>
       </div>
       </div>
-      <div class="spacer aboutwhitedark"></div>
+
+<!--       <div class="spacer aboutwhitedark"></div>
     <div class="bg-darke text-secondary px-4 py-5 text-center">
       <div class="py-5">
         <h2 class="display-5 fw-bold text-white" style="text-shadow: 1.5px 1.5px #7c7e7b ">What do I do? </h2>
@@ -73,11 +74,10 @@
       <div class="spacer aboutwhitedark flip"></div>
         <div class="container d-flex justify-content-center p-3">
           <h2 class="display-5 fw-bold py-5">Schedule a meeting with me</h2>
-        </div>
-<!-- Calendly inline widget begin -->
+        </div> -->
+<!--  Calendly inline widget begin 
 <div id="calendly" class="calendly-inline-widget" data-url="https://calendly.com/ervin-macic/conversation-meeting?hide_gdpr_banner=1" style="min-width:320px;height:800px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-<!-- Calendly inline widget end -->
 </div>
     <div class="spacer whitedarke"></div>
     <div class="container-fluid bg-darke">
@@ -93,13 +93,12 @@
           </div>
           <div class="col-lg">
             <a href="../blog/"><img src="../images/fun/blogvju.jpg" class="cruvycurv hvr-glow shadow-lg img-fluid" width="300" height="320"> </a>
-              <!-- <div class="centered text-dark font-"><h2><b>The Blog</b></h2></div> -->
           </div>
         </div>
       </div>
-    </div>
+    </div>  -->
 
-    <div class="spacer darkeblack"></div>
+    <!-- <div class="spacer darkeblack"></div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js" type="text/javascript"></script> 
     <script src="index.js"></script>
@@ -129,7 +128,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
