--- a/contact/index.html
+++ b/contact/index.html
@@ -57,9 +57,9 @@
               <li class="nav-item px-3">
                 <a class="nav-link text-white hvr-underline-reveal" href="/blog/" id="#"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Blog</h4></a>
               </li>
-              <li class="nav-item px-3">
+              <!-- <li class="nav-item px-3">
                 <a class="nav-link text-white hvr-underline-reveal" id="#" href="/projects/"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Projects</h4></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
