Mostly done with part 1

--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,9 @@
         <div class="col-lg-6 py-5 px-5">
           <h2 class="display-5 fw-bold lh-1 mb-3 px-3" style="text-shadow: 2px 2px #969696 ">Hi, I'm Ervin</h2>
           
-          <p class="fs-4 px-3">I'm from Bosnia and Herzegovina. <br> I'm currently studying <strong>Maths and Computer Science</strong> at Oxford. <br> I'm primarily interested in AI and quantitative finance.
+          <p class="fs-4 px-3">I'm from Bosnia and Herzegovina. <br> I'm currently studying <strong>Maths and Computer Science</strong> at Oxford. <br> 
+            I'm primarily interested in applying technology 
+            to solve real-world problems.
             </p>
         </div>
       </div>
