Fix contact page icons on phone

--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
     <h2 class="display-4 fw-bold lh-1 mb-3" style="text-shadow: 1px 1px #969696;">
       Hi, I'm Ervin
     </h2>
-    <p class="fs-5" style="max-width: 550px;">
+    <p class="fs-5" style="max-width: 550px; color: #494949;">
       I'm from Bosnia and Herzegovina. <br> 
       I study Math and Computer Science at Oxford and I'm broadly interested in using technology 
       to solve real-world problems.
