--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ervin Macić</title>
     <link href="index.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="/css/hover.css" rel="stylesheet" media="all">
     <link href="/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,60 +15,51 @@
   <body id="home">
     <nav class="navbar navbar-expand-lg navbar-dark bg-darke">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0 justify-content-center">
-            <li class="nav-item px-3 justify-content-center">
-              <a class="nav-link active text-white hvr-underline-reveal" aria-current="page" href="#" id="#"><h5 style="text-shadow: 1.5px 1.5px #50524f ">About</h5></a>
+            <li class="nav-item px-3">
+              <a class="nav-link active text-white hvr-underline-reveal" href="#"><h5>About</h5></a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" href="/Ervin_Macic_CV.pdf" id="cv" target="_blank"><h5 style="text-shadow: 1.5px 1.5px #50524f ">CV</h5></a>
+              <a class="nav-link text-white hvr-underline-reveal" href="/Ervin_Macic_CV.pdf" target="_blank"><h5>CV</h5></a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" href="../contact/">
-                <h5 style="text-shadow: 1.5px 1.5px #50524f ">Contact</h5>
-              </a>
+              <a class="nav-link text-white hvr-underline-reveal" href="../contact/"><h5>Contact</h5></a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" href="/blog/" id="#"><h5 style="text-shadow: 1.5px 1.5px #50524f ">Blog</h5></a>
+              <a class="nav-link text-white hvr-underline-reveal" href="/blog/"><h5>Blog</h5></a>
             </li>
-            <!-- <li class="nav-item px-3">
-              <a class="nav-link text-white hvr-underline-reveal" id="#" href="../projects/"><h4 style="text-shadow: 1.5px 1.5px #50524f ">Projects</h4></a>
-            </li> -->
           </ul>
         </div>
       </div>
-    </nav> 
-    <!-- <div id="red-white" class="placeholder homedarkwhite"></div> -->
-      
-<div class="about-section d-flex flex-lg-row-reverse align-items-center justify-content-center bg-blobs">
-  <div class="image-col text-center">
-    <figure>
-      <div class="delux-centering">
-        <img src="/images/ervin_photo.jpg" class="d-block mx-auto img-fluid roundy shady">
+    </nav>
+
+    <div class="about-section d-flex flex-lg-row-reverse align-items-center justify-content-center bg-blobs">
+      <div class="image-col text-center">
+        <figure>
+          <div class="delux-centering">
+            <img src="/images/ervin_photo.jpg" class="d-block mx-auto img-fluid roundy shady">
+          </div>
+          <figcaption class="text-center py-2 fs-4 fw-light">
+            <strong><span class="fs-5 font-monospace">Ervin Macić &#128075;</span></strong>
+          </figcaption>
+        </figure>
       </div>
-      <figcaption class="text-center py-2 fs-4 fw-light">
-        <strong><span class="fs-5 font-monospace">Ervin Macić &#128075;</span></strong>
-      </figcaption>
-    </figure>
-  </div>
-  <div class="text-col px-4">
-    <h2 class="display-4 fw-bold lh-1 mb-3" style="text-shadow: 1px 1px #969696;">
-      Hi, I'm Ervin
-    </h2>
-    <p class="fs-5" style="max-width: 550px; color: #494949;">
-      I'm from Bosnia and Herzegovina. <br> 
-      I study Math and Computer Science at Oxford and I'm broadly interested in using technology 
-      to solve real-world problems.
-    </p>
-  </div>
-</div>
+      <div class="text-col px-4">
+        <h2 class="display-4 fw-bold lh-1 mb-3">Hi, I'm Ervin</h2>
+        <p class="fs-5" style="max-width: 550px; color: #494949;">
+          I'm from Bosnia and Herzegovina. <br> 
+          I study Math and Computer Science at Oxford and I'm broadly interested in using technology 
+          to solve real-world problems.
+        </p>
+      </div>
+    </div>
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
-</html>  
+</html>
